2020-11-23  Timm Bäder  <tbaeder@redhat.com>

	* segment_report_module.c (dwfl_segment_report_module): Remove
	consider_dyn, do checks inline.

2020-11-23  Timm Bäder  <tbaeder@redhat.com>

	* segment_report_module.c (dwfl_segment_report_module): Do one
	loop check for d32/d64 arrays.

2020-11-23  Timm Bäder  <tbaeder@redhat.com>

	* segment_report_module.c (dwfl_segment_report_module): Remove
	read_phdr, do check and call memory_callback directly.

2020-11-23  Timm Bäder  <tbaeder@redhat.com>

	* segment_report_module.c (dwfl_segment_report_module): Do one
	loop check for p32/p64 arrays.

2020-11-23  Timm Bäder  <tbaeder@redhat.com>

	* segment_report_module.c (dwfl_segment_report_module): Remove
	final_read, call memory_callback directly.

2020-11-23  Timm Bäder  <tbaeder@redhat.com>

	* segment_report_module.c (struct elf_build_id): New.
	(dwfl_segment_report_module): Pass build_id as struct.

2020-11-23  Timm Bäder  <tbaeder@redhat.com>

	* segment_report_module.c (dwfl_segment_report_module): Remove
	release_buffer, call memory_callback directly.

2020-11-23  Timm Bäder  <tbaeder@redhat.com>

	* segment_report_module.c (dwfl_segment_report_module): Remove
	segment_read, call memory_callback directly.

2020-11-19  Andreas Krebbel  <krebbel@linux.ibm.com>

	* linux-pid-attach.c (pid_memory_read): Shift the upper 4 bytes
	down on big endian 64 bit targets.

2020-11-12  Timm Bäder <tbaeder@redhat.com>

	* dwfl_segment_report_module.c (dwfl_segment_report_module): Remove
	finish function, replace with goto out.

2020-11-12  Timm Bäder <tbaeder@redhat.com>

	* dwfl_segment_report_module.c (dwfl_segment_report_module): Declare
	p32 and p64 as pointers instead of arrays.

2020-09-18  Mark Wielaard  <mark@klomp.org>

	* zstd.c: New file.
	* libdwflP.h: Add DWFL_E_ZSTD and __libdw_unzstd.
	* Makefile.am (libdwfl_a_SOURCES): add zstd.c if ZSTD.
	* gzip.c: Add defines and includes for ZSTD.
	(zlib_fail): Don't define for ZSTD.